--- a/src/app/pages/update-timetable/update-timetable.component.html
+++ b/src/app/pages/update-timetable/update-timetable.component.html
@@ -18,11 +18,11 @@
                                   <div  class="td_select">
                                   <td><span>Chương trình học</span></td>
                                     <td>
-                                        <select  [(ngModel)]="timetable.courseId" style="width: 350px;"   name="program" id="program" class="form-select" aria-label="Default select example" required>
+                                        <!-- <select  [(ngModel)]="timetable.courseId" style="width: 350px;"   name="program" id="program" class="form-select" aria-label="Default select example" required>
                                           <option value="1" disabled >-- Chọn khóa học --</option>
                                           <option  *ngFor="let course of courses" value="{{course.course_id}}">{{course.english.englishName}} | {{course.program}} | {{course.openning}}</option>
-                                        </select>
-                                        <!-- <input type="text" [(ngModel)]="timetable.courseId" name="id" id="id"> -->
+                                        </select> -->
+                                        <input type="text" [(ngModel)]="timetable.courseId" name="id" id="id">
                                     </td>
                                   </div>
                                 </table>
@@ -34,7 +34,7 @@
                                 <div  class="td_select">
                                   <td><span>Phòng học</span></td>
                                   <td>
-                                    <select [(ngModel)]="timetable.classroom" style="width: 350px;" name="classroom" id="classroom">
+                                    <!-- <select [(ngModel)]="timetable.classroom" style="width: 350px;" name="classroom" id="classroom">
                                         <option disabled >-- Chọn phòng --</option>
                                         <option value="P01">P01</option>
                                         <option value="P02">P02</option>
@@ -45,8 +45,8 @@
                                         <option value="P07">P07</option>
                                         <option value="P08">P08</option>
                                         <option value="P09">P09</option>
-                                    </select>
-                                    <!-- <input type="text" [(ngModel)]="timetable.classroom" name="classroom" id="classroom" > -->
+                                    </select> -->
+                                    <input type="text" [(ngModel)]="timetable.classroom" name="classroom" id="classroom" >
 
                                   </td>
                                 </div>
@@ -59,13 +59,13 @@
                               <div  class="td_select">
                                 <td><span>Giảng viên</span></td>
                                 <td>
-                                    <select [(ngModel)]="timetable.teacherId" style="width: 350px;" name="fullName" id="fullName" class="form-select" aria-label="Default select example" required>
+                                    <!-- <select [(ngModel)]="timetable.teacherId" style="width: 350px;" name="fullName" id="fullName" class="form-select" aria-label="Default select example" required>
 
                                       <option value="1" disabled >-- Chọn giảng viên --</option>
                                       <option value="{{teachers.id}}" *ngFor="let teachers of teachers">{{teachers.fullName}}</option>
 
-                                    </select>
-                                    <!-- <input type="text" [(ngModel)]="timetable.teacherId" name="fullName" id="fullName" > -->
+                                    </select> -->
+                                    <input type="text" [(ngModel)]="timetable.teacherId" name="fullName" id="fullName" >
                                   </td>
 
                               <td><button  type="submit">Thêm</button></td>
